@@ -1,3 +1,10 @@
+2008-07-21  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-selector.cc:
+	* src/gnome-cmd-file-selector.h:
+	* src/gnome-cmd-user-actions.cc:
+	Fix for setting the current working directory to the remote inactive one (CTRL+., CTRL+LEFT/RIGHT)
+
 2008-07-20  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-con.cc:
